[package]
name = "mysql-stress-tester"
version = "0.1.0"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dotenv = { version = "0.15" } # .envファイルを読み込む
rand = { version = "0.8", features = ["small_rng"] } # 乱数生成
mysql = { version = "25.0.1" } # MySQLクライアント
tokio = { version = "1.40.0",features = ["full"]  } # 非同期ランタイム
futures = { version = "0.3.31" } # 非同期プログラミング