[package]
name = "mysql-stress-tester"
version = "0.1.0"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dotenv = { version = "0.15" }
mysql = { version = "25.0" }
tokio = { version = "1.40", features = ["full"] }
futures = { version = "0.3" }
thiserror = "1.0"
uuid = { version = "1.11", features = ["v6", "v7"] }
time = { version = "0.3", features = ["macros", "formatting"] }
once_cell = "1.20"
rand = "0.8"